W02 Submission: Semantic HTML and Basic CSS

--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <!doctype html>
-<html>
+<html lang="en-us">
     <head>
-        <title>Test Page</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <title>CIT 230 Assignment Portal | Cindy Jorgensen | BYU-Idaho</title>
+        <meta name="description" content="Assignment portal page for Cindy Jorgensen in CIT 230:Web Front-End Development
+         at Brigham Young University-Idaho.">
+         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <h1>Test Page</h1>
-        <p>This is a paragraph.</p>
+        <header>
+            <img src="images/IMG_0158.jpg" alt="My Profile Picture">
+            <h1>Cindy Jorgensen</h1>
+        </header>
+        <main>
+            <h2>CIT 230 - Assignment Portal</h2>
+            <ul>
+                <li>Lesson ##: <a href="#">Assignment Label</a></li>
+            </ul>
+        </main>
+        <footer>
+            <p>
+                <entity>&copy;</entity> 2019 - Cindy Jorgensen - Location: Alaska - <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a>
+            </p>
+        </footer>
+
     </body>
 </html>
