Correction to files.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-This is my final project home page. This will be replaced with your final project files during the second part of the semester. This will not be updated until then.
+<!doctype html>
+<html lang="en-us">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <title>CIT 230 Assignment Portal | Cindy Jorgensen | BYU-Idaho</title>
+        <meta name="description" content="Assignment portal page for Cindy Jorgensen in CIT 230:Web Front-End Development
+         at Brigham Young University-Idaho.">
+         <link rel="stylesheet" href="css/main.css">
+    </head>
+    <body>
+        <header>
+            <img src="images/CindyJorgensenHawaii.jpg" alt="My Profile Picture">
+            <h1>Cindy Jorgensen</h1>
+        </header>
+        <main>
+            <h2>CIT 230 - Assignment Portal</h2>
+            <ul>
+                <li>Lesson ##: <a href="#">Assignment Label</a></li>
+            </ul>
+        </main>
+        <footer>
+            <p>
+                <entity>&copy;</entity> 2019 - Cindy Jorgensen - Location: Alaska - <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a>
+            </p>
+        </footer>
+
+    </body>
+</html>
