UPDATE TO WEEK 3 assignment

--- a/assignments/lesson-3/fixedhtml.html
+++ b/assignments/lesson-3/fixedhtml.html
@@ -10,7 +10,8 @@
         <style>
             .style1 {margin: 0 auto; border: 1px solid #bbb; padding: 5px; background-color: #eee; line-height: 1.5em;}
         </style>
-        <link rel="stylesheet" href="styles/main.css">     
+        <link rel="stylesheet" href="styles/main.css">
+     
     </head>
 
     <body>
@@ -71,10 +72,12 @@
                             <li> <a href="http://www.lewiston.com/business-directory-2-2/">LEWISTON IDAHO</a> </li>
                             <li> <a href="http://www.moscow.com/business-directory-2/">Moscow ID</a> </li>
                         </ol>
-                    
-                    <marquee>Subscribe to our Newsletter to get daily specials emailed to you directly!!</marquee>
                 </section>
             </main>
+
+            <!--This is not working
+            <marquee>Subscribe to our Newsletter to get daily specials emailed to you directly!!</marquee>
+            -->
 
             <div id="contact">
                 <p>To find out more, contact Bobby at 4455. </p>
