update file to include link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </main>
         <footer>
             <p>
-                <entity>&copy;</entity> 2019 - Cindy Jorgensen - Location: Alaska - <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a>
+                &copy; 2019 - Cindy Jorgensen - Location: Alaska - <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a>
             </p>
         </footer>
 
