update file to repository

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <main>
             <h2>CIT 230 - Assignment Portal</h2>
             <ul>
-                <li>Lesson 03: <a href="assignments/lesson-3/fixedhtml.html">HTML Markup Validation Assignment</a></li>
+                <li>Lesson 3: <a href="assignments/lesson-3/fixedhtml.html">HTML Markup Validation Assignment</a></li>
             </ul>
         </main>
         <footer>
             <p>
-                &copy; 2019 - Cindy Jorgensen - Location: Alaska - <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a>
+                <entity>&copy;</entity> 2019 - Cindy Jorgensen - Location: Alaska - <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a>
             </p>
         </footer>
 
