update week 3 githubpage <test>

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <main>
             <h2>CIT 230 - Assignment Portal</h2>
             <ul>
+                <!-- Inputting the new file fixedhtml.html to initial page for updage -->
                 <li>Lesson 3: <a href="assignments/lesson-3/fixedhtml.html">HTML Markup Validation Assignment</a></li>
             </ul>
         </main>
