--- a/assignments/lesson-3/fixedhtml.html
+++ b/assignments/lesson-3/fixedhtml.html
@@ -4,7 +4,7 @@
         <title>Untitled Document</title>
         <meta charset="utf-8">
         <meta name="description" content="The Quad-Cities Transporation Center has been serving the region for over 30 years.">
-        <!--What do I do with this line
+        <!--What do I do with this line, it is for HTML 4.0 -I feel it should be eliminated.
         <meta content="HTML PUBLIC-//W3C//DTD HTML 4.01 Transitional//EN http://www.w3.org/TR/html4/loose.dtd">
          -->
         <style>
