--- a/assignments/lesson-3/fixedhtml.html
+++ b/assignments/lesson-3/fixedhtml.html
@@ -25,7 +25,7 @@
             <!--Navigation Menu-->    
             <nav>
                 <ul>
-                    <li><a href="#" class="current">Home</a></li>
+                    <li><a href="../../index.html" class="current">Home</a></li>
                     <li><a href="products/">Products</a></li>
                     <li><a href="services/">Services</a></li>
                     <li><a href="locations/">Locations</a></li>
