--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <ul>
                 <!-- Inputting the new file fixedhtml.html to initial page for updage -->
                 <li>Lesson 3: <a href="assignments/lesson-3/fixedhtml.html">HTML Markup Validation Assignment</a></li>
+                <li>Lesson 4: <a href="assignments/lesson-4/Week4_WeatherProject.pdf">Weather Site Plan</a></li>
             </ul>
         </main>
         
