--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <!-- Inputting the new file fixedhtml.html to initial page for updage -->
                 <li>Lesson 3: <a href="assignments/lesson-3/fixedhtml.html">HTML Markup Validation Assignment</a></li>
                 <li>Lesson 4: <a href="assignments/lesson-4/Week4_WeatherProject.pdf">Weather Site Plan</a></li>
+                <li>Lesson 4-1: <a href="assignments/lesson-4/preston-4.html">Preston</a></li>
             </ul>
         </main>
         
