--- a/assignments/lesson-4/preston-4.html
+++ b/assignments/lesson-4/preston-4.html
@@ -11,11 +11,12 @@
     <body>
         <!-- Specific to mobile devices -->
         <header>
-                <section id="headings">
-                    <img src="https://cdn1.iconfinder.com/data/icons/Futurosoft%20Icons%200.5.2/128x128/apps/keyboard_layout.png" alt="The world logo">
-                    <h1>Weekend Warrior Weather</h1>
+                <img src="https://cdn1.iconfinder.com/data/icons/Futurosoft%20Icons%200.5.2/128x128/apps/keyboard_layout.png" alt="The world logo">
+                <section class="siteHeading">
+                    <h1 style="color: #e7ecef">Weekend Warrior Weather</h1>
                     <div class="motto"> "Climate is what we expect, weather is what we get." - Mark Twain</div>
                 </section>
+
         </header>
 
         <nav>
@@ -23,7 +24,7 @@
                 <li class="dropdown">
                     <a href="javascript:void(0)" class="dropbtn">Menu</a>
                     <div class="dropdown-content">
-                        <a href="#">Home</a>
+                        <a href="../../index.html">Home</a>
                         <a href="#">Soda Springs</a>
                         <a href="#">Fish Haven</a>
                         <a href="#">Storm Center</a>
@@ -36,14 +37,69 @@
         <main>
             
             <h1>Preston</h1>
-           
+           <hr>
             <section>
                 <!-- Weather Summary Area -->
                 <h3>Weather Summary</h3>
+                <h4>Forecast for Preston</h4>
+                <table>
+
+                    <thead>
+                        <tr>
+                        <th>Day of Week</th>
+                        <th>High</th>
+                        <th>Low</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th>Sunday</th>
+                            <td>40&deg;</td>
+                            <td>34&deg;</td>
+                        </tr>
+                        <tr>
+                            <th>Monday</th>
+                            <td>40&deg;</td>
+                            <td>31&deg;</td>
+                        </tr>
+                        <tr>
+                            <th>Tuesday</th>
+                            <td>35&deg;</td>
+                            <td>18&deg;</td>
+                        </tr>
+                        <tr>
+                            <th>Wednesday</th>
+                            <td>27&deg;</td>
+                            <td>8&deg;</td>
+                        </tr>
+                        <tr>
+                            <th>Thursday</th>
+                            <td>23&deg;</td>
+                            <td>10&deg;</td>
+                        </tr>
+                        <tr>
+                            <th>Friday</th>
+                            <td>28&deg;</td>
+                            <td>17&deg;</td>
+                        </tr>
+                        <tr>
+                            <th>Saturday</th>
+                            <td>32&deg;</td>
+                            <td>11&deg;</td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
             </section>
+
+            <br><br>
+
+            <hr />
 
                 <!-- Article informaiton is applied here with image etc.-->
             <article>
+                <h3>Article Title</h3>
                 <img src="images/Test_WeatherImageArticle.jpeg" alt="Blowing and drifting snow on roadway" />
 
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
