update for mobile format

--- a/assignments/lesson-4/preston-4.html
+++ b/assignments/lesson-4/preston-4.html
@@ -2,6 +2,7 @@
 <html lang="en-us">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Weekend Warrior Weather</title>
 
         <link href="styles/small-4.css" type="text/css" rel="stylesheet" />
@@ -40,8 +41,8 @@
            <hr>
             <section>
                 <!-- Weather Summary Area -->
-                <h3>Weather Summary</h3>
-                <h4>Forecast for Preston</h4>
+                <h2>Weather Summary</h2>
+                <h3>Forecast for Preston</h3>
                 <table>
 
                     <thead>
@@ -99,7 +100,7 @@
 
                 <!-- Article informaiton is applied here with image etc.-->
             <article>
-                <h3>Article Title</h3>
+                <h2>Article Title</h2>
                 <img src="images/Test_WeatherImageArticle.jpeg" alt="Blowing and drifting snow on roadway" />
 
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
