--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li>Lesson 3: <a href="assignments/lesson-3/fixedhtml.html">HTML Markup Validation Assignment</a></li>
                 <li>Lesson 4: <a href="assignments/lesson-4/Week4_WeatherProject.pdf">Weather Site Plan</a></li>
                 <li>Lesson 4-1: <a href="assignments/lesson-4/preston-4.html">Preston</a></li>
+                <li>Lesson 5: <a href="assignments/lesson-5/preton-5.html">Preston Weather Page (Week 5)</a></li>
             </ul>
         </main>
         
