--- a/assignments/lesson-5/preston-5.html
+++ b/assignments/lesson-5/preston-5.html
@@ -9,8 +9,8 @@
         <link href="styles/normalize.css" type="text/css" rel="stylesheet" />
 
         <!-- This is the link to the CSS file that will be used to format the small and large css files-->
-        <link href="styles/large-5.css" type="text/css" rel="stylesheet" />
         <link href="styles/small-5.css" type="text/css" rel="stylesheet" />
+        <link href="styles/large-5.css" type="text/css" rel="stylesheet" />
 
     </head>
 
@@ -28,8 +28,8 @@
         <div class="menuCenter">
             <nav>
                 <ul>
-                    <li class="dropdown"><a href="../../index.html">Home</a></li>
-                    <li><a href="#">Preston</a></li>
+                    <li class="dropdown"><a href="../../index.html"> &equiv; Home</a></li>
+                    <li><a class="active" href="#">Preston</a></li>
                     <li><a href="#">Soda Springs</a></li>
                     <li><a href="#">Fish Haven</a></li>
                     <li><a href="#">Storm Center</a></li>
@@ -43,7 +43,7 @@
                 <hr>
                 <div class="flexContainer flexCenter itemCenter fullWidth centerImage">
                                       
-                    <img src="images/PrestonID.jpg" alt="country living">
+                    <img src="images/PrestonID.png" alt="country living">
 
                     <div class="weatherSummaryBox">
                         <h3><span class="townDiv">Weather Summary</span></h3>
@@ -100,7 +100,7 @@
                 <article>
                     <div class="section3">
                         <h3>Article Title</h3>
-                        <img src="images/Test_WeatherImageArticle.jpeg" alt="Blowing and drifting snow on roadway" />
+                        <img id="imageArticle" src="images/Test_WeatherImageArticle.jpeg" alt="Blowing and drifting snow on roadway" />
 
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </div>
@@ -111,20 +111,18 @@
         <address class="contactMe">
             <div class="contactInfo"
             <h4>Weekend Warrior Weather </hr></br>
-            <!--Marker--> 30 N 1st E </br>
+            <!--Marker--> 121 S State Street </br>
             Preston, ID 83263 </br>
         </br>
              <!--Phone Icon--> 208-555-6677 </br>
              <!--Email Icon--> <a href="mailto:cljorgensen.pta@outlook.com">CJorgensen@weekendwarriorweather.com</a>
             </div>
+        </br>
             <!--The div element for the map -->
             <div class="mapouter">
                 <div class="gmap_canvas">
-                    <iframe id="gmap_canvas" src="https://maps.google.com/maps?q=Preston%2C%20ID&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe> 
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2960.632220085877!2d-111.87840338417418!3d42.09392887920563!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8754f7ea14d5c557%3A0x4e385fff8a07b494!2s121+S+State+St%2C+Preston%2C+ID+83263!5e0!3m2!1sen!2sus!4v1550136734933" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
-                    
-                    <style>.mapouter{text-align:right;height:144px;width:300px;}.gmap_canvas {overflow:hidden;background:none!important;height:144px;width:300px;}
-                    </style>
             </div>
         </address>
 
