--- a/assignments/lesson-6/preston-6.html
+++ b/assignments/lesson-6/preston-6.html
@@ -115,10 +115,8 @@
                 </p>
             </div>
             <!--The div element for the map -->
-            <div class="mapouter">
-                <div class="gmap_canvas">
+            <div class="gmap_canvas clearfix">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2960.632220085877!2d-111.87840338417418!3d42.09392887920563!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8754f7ea14d5c557%3A0x4e385fff8a07b494!2s121+S+State+St%2C+Preston%2C+ID+83263!5e0!3m2!1sen!2sus!4v1550136734933"></iframe>
-                </div>
             </div>
         </address>
 
