--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <li>Lesson 4-1: <a href="assignments/lesson-4/preston-4.html">Preston</a></li>
                 <li>Lesson 5: <a href="assignments/lesson-5/preston-5.html">Preston Weather Page</a></li>
                 <li>Lesson 6: <a href="assignments/lesson-6/preston-6.html">Preston Weather Page</a></li>
+                <li>Lesson 7: <a href="assignments/lesson-7/preston-7.html">Lesson 7: Preston & Gallery Pages</a></li>
             </ul>
         </main>
         
