--- a/assignments/lesson-7/gallery-7.html
+++ b/assignments/lesson-7/gallery-7.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <title>Weekend Warrior Weather</title>
+        <title>Weekend Warrior Weather - Gallery</title>
 
         <!-- This the normalize.css file link that must be first before any other links!-->
         <link href="styles/normalize.css" type="text/css" rel="stylesheet" />
@@ -16,9 +16,8 @@
     </head>
 
     <body>
-        <!-- Specific to mobile devices -->
         <header class="clearfix heading">
-            <img id="homeTown" src="https://cdn1.iconfinder.com/data/icons/Futurosoft%20Icons%200.5.2/128x128/apps/keyboard_layout.png" alt="The world logo">
+            
             <h1 class="siteHeading"style="color: #e7ecef">Weekend Warrior Weather</h1>
             <div class="motto"> "Climate is what we expect, weather is what we get." - Mark Twain</div>
         </header>
@@ -38,12 +37,30 @@
 
         <main>
             <div class="gallery">
-                <img>
-                <img>               
-                <img>
-                <img>
-                <img>
-                <img>    
+                <figure class="fig1">
+                    <img src="images/Gallery_pexels-photo-763398.jpeg" alt="">
+                    <figcaption></figcaption> 
+                </figure>
+                <figure class="fig2">
+                    <img src="images/Gallery_pexels-photo-1118861.jpeg">
+                    <figcaption></figcaption> 
+                </figure>            
+                <figure class="fig3">
+                    <img src="images/Gallery_pexels-photo-1118873.jpeg">
+                    <figcaption></figcaption> 
+                </figure>
+                <figure class="fig4">
+                    <img src="images/Gallery_pexels-photo-1446076.jpeg">
+                    <figcaption></figcaption> 
+                </figure>      
+                <figure class="fig5">
+                    <img src="images/Gallery_pexels-photo-267151.jpeg">
+                    <figcaption></figcaption> 
+                </figure>
+                <figure class="fig6">
+                    <img src="images/Gallery_pexels-photo-355403.jpeg">
+                    <figcaption></figcaption> 
+                </figure>   
             </div>
         </main>
 
