--- a/assignments/lesson-7/gallery-7.html
+++ b/assignments/lesson-7/gallery-7.html
@@ -38,27 +38,27 @@
         <main>
             <div class="gallery">
                 <figure class="fig1">
-                    <img src="images/Gallery_pexels-photo-763398.jpeg" alt="">
+                    <img src="images/Gallery_pexels-photo-763398.jpg" alt="city scenic view in the rain">
                     <figcaption></figcaption> 
                 </figure>
                 <figure class="fig2">
-                    <img src="images/Gallery_pexels-photo-1118861.jpeg">
+                    <img src="images/Gallery_pexels-photo-1118861.jpg" alt="clear day ">
                     <figcaption></figcaption> 
                 </figure>            
                 <figure class="fig3">
-                    <img src="images/Gallery_pexels-photo-1118873.jpeg">
+                    <img src="images/Gallery_pexels-photo-1118873.jpg" alt="">
                     <figcaption></figcaption> 
                 </figure>
                 <figure class="fig4">
-                    <img src="images/Gallery_pexels-photo-1446076.jpeg">
+                    <img src="images/Gallery_pexels-photo-1446076.jpg" alt="">
                     <figcaption></figcaption> 
                 </figure>      
                 <figure class="fig5">
-                    <img src="images/Gallery_pexels-photo-267151.jpeg">
+                    <img src="images/Gallery_pexels-photo-267151.jpg" alt="">
                     <figcaption></figcaption> 
                 </figure>
                 <figure class="fig6">
-                    <img src="images/Gallery_pexels-photo-355403.jpeg">
+                    <img src="images/Gallery_pexels-photo-355403.jpg" alt="">
                     <figcaption></figcaption> 
                 </figure>   
             </div>
@@ -67,12 +67,7 @@
         <address >
             <div class="contactMe, clearfix">
                 <p>
-                    <b>Weekend Warrior Weather </b><br>
-                    <!--Marker--> 121 S State Street <br>
-                    Preston, ID 83263 <br>
-                <br>
-                    &#9742; 208-555-6677 <br>
-                    &#xe0be; <a href="mailto:cljorgensen.pta@outlook.com">CJorgensen@weekendwarriorweather.com</a>
+        
                 </p>
             </div>
             <!--The div element for the map -->
