--- a/assignments/lesson-7/gallery-7.html
+++ b/assignments/lesson-7/gallery-7.html
@@ -38,28 +38,28 @@
         <main>
             <div class="gallery">
                 <figure class="fig1">
-                    <img src="images/Gallery_pexels-photo-763398.jpg" alt="city scenic view in the rain">
-                    <figcaption></figcaption> 
+                    <img src="images/Gallery_pexels-photo-763398.jpg" alt="rain falling on flowers">
+                    <figcaption>Photo by Michael Podger on Unsplash</figcaption> 
                 </figure>
                 <figure class="fig2">
-                    <img src="images/Gallery_pexels-photo-1118861.jpg" alt="clear day ">
-                    <figcaption></figcaption> 
+                    <img src="images/bethany-laird-311256-unsplash.jpg" alt="lightning streaking across sky ">
+                    <figcaption>Photo by Bethany Laird on Unsplash</figcaption> 
                 </figure>            
                 <figure class="fig3">
-                    <img src="images/Gallery_pexels-photo-1118873.jpg" alt="">
-                    <figcaption></figcaption> 
+                    <img src="images/Gallery_pexels-photo-236047.jpg" alt="storm clouds moving across field">
+                    <figcaption>Trouble is brewing...</figcaption> 
                 </figure>
                 <figure class="fig4">
-                    <img src="images/Gallery_pexels-photo-1446076.jpg" alt="">
+                    <img src="images/Gallery_alm-friuli-snow-snowfall-45204.jpg" alt="snowfall to cabin rooftop">
                     <figcaption></figcaption> 
                 </figure>      
                 <figure class="fig5">
-                    <img src="images/Gallery_pexels-photo-267151.jpg" alt="">
-                    <figcaption></figcaption> 
+                    <img src="images/marko-blazevic-313835-unsplash.jpg" alt="">
+                    <figcaption>Photo by Marko Blaxevic on Unsplash</figcaption> 
                 </figure>
                 <figure class="fig6">
-                    <img src="images/Gallery_pexels-photo-355403.jpg" alt="">
-                    <figcaption></figcaption> 
+                    <img src="images/Gallery_andrew-seaman-748643-unsplash.jpg" alt="tornado">
+                    <figcaption>Photo by Andrew Seaman on Unsplash</figcaption> 
                 </figure>   
             </div>
         </main>
