--- a/assignments/lesson-7/gallery-7.html
+++ b/assignments/lesson-7/gallery-7.html
@@ -35,7 +35,7 @@
             </ul>
         </nav>
 
-        <main>
+        <main class="galleryPage">
             <div class="gallery">
                 <figure class="fig1">
                     <img src="images/Gallery_michael-podger-252489-unsplash.jpg" alt="rain falling on flowers">
