--- a/assignments/lesson-7/preston-7.html
+++ b/assignments/lesson-7/preston-7.html
@@ -19,7 +19,7 @@
         <!-- Specific to mobile devices -->
         <header class="clearfix heading">
             <img id="homeTown" src="https://cdn1.iconfinder.com/data/icons/Futurosoft%20Icons%200.5.2/128x128/apps/keyboard_layout.png" alt="The world logo">
-            <h1 class="siteHeading"style="color: #e7ecef">Weekend Warrior Weather</h1>
+            <h1 class="siteHeading" style="color: #e7ecef">Weekend Warrior Weather</h1>
             <div class="motto"> "Climate is what we expect, weather is what we get." - Mark Twain</div>
         </header>
 
@@ -108,7 +108,6 @@
                         </div>
                     </div>
                 </article>
-            </div>
         </main>
 
         <address >
@@ -133,7 +132,7 @@
                 <br>
                 <hr>
 
-            <body onLoad="currentDate()">
+            <div onLoad="currentDate()">
             <div id="date"></div>
         </footer>
 
