--- a/assignments/lesson-7/gallery-7.html
+++ b/assignments/lesson-7/gallery-7.html
@@ -18,7 +18,7 @@
     <body>
         <header class="clearfix heading">
             
-            <h1 class="siteHeading"style="color: #e7ecef">Weekend Warrior Weather</h1>
+            <h1 class="siteHeading" style="color: #e7ecef">Weekend Warrior Weather</h1>
             <div class="motto"> "Climate is what we expect, weather is what we get." - Mark Twain</div>
         </header>
 
@@ -68,9 +68,9 @@
             &copy; 2019 - Cindy Jorgensen - Location: Alaska -<a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a>
                 <br>
                 <hr>
-            <body onLoad="currentDate()">
+            <div onLoad="currentDate()"></div>
             <div id="date"></div>
-
+        </footer>
         <script src="scripts/currentdate.js"> </script>
     </body>
 </html>
