--- a/assignments/lesson-7/preston-7.html
+++ b/assignments/lesson-7/preston-7.html
@@ -132,7 +132,7 @@
                 <br>
                 <hr>
 
-            <div onLoad="currentDate()">
+            <div onLoad="currentDate()"></div>
             <div id="date"></div>
         </footer>
 
