--- a/assignments/lesson-7/preston-7.html
+++ b/assignments/lesson-7/preston-7.html
@@ -15,7 +15,7 @@
 
     </head>
 
-    <body>
+    <body onLoad="currentDate()">
         <!-- Specific to mobile devices -->
         <header class="clearfix heading">
             <img id="homeTown" src="https://cdn1.iconfinder.com/data/icons/Futurosoft%20Icons%200.5.2/128x128/apps/keyboard_layout.png" alt="The world logo">
@@ -133,7 +133,6 @@
                 <br>
                 <hr>
 
-            <div onLoad="currentDate()"></div>
             <div id="date"></div>
         </footer>
 
