--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 <li>Lesson 5: <a href="assignments/lesson-5/preston-5.html">Preston Weather Page</a></li>
                 <li>Lesson 6: <a href="assignments/lesson-6/preston-6.html">Preston Weather Page</a></li>
                 <li>Lesson 7: <a href="assignments/lesson-7/preston-7.html">Lesson 7: Preston & Gallery Pages</a></li>
-                <li>Lesson 8: <a href="assignments/lesson-8/preston-8.html"></a></li>
+                <li>Lesson 8: <a href="assignments/lesson-8/Week8-tablebuild.html"> - 1: Building a Table</a></li>
+                <li>Lesson 8: <a href="assingments/lesson-8/storm-center.html">- 2: Storm Center Page</a></li>
             </ul>
         </main>
         
