--- a/assignments/lesson-8/Week8-tablebuild.html
+++ b/assignments/lesson-8/Week8-tablebuild.html
@@ -9,53 +9,59 @@
     <link href="styles/tablebuild.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <table>
-        <thead>
-            <tr>
-                <th class=header colspan="3">ACME Wildwest</th>
-            </tr>
-            <tr>
-                <th>Period</th>
-                <th>Sales</th>
-                <th>Sales Goals</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>August</td>
-                <td>$3,590</td>
-                <td>$4,000</td>
-            </tr>
-            <tr>
-                <td>September</td>
-                <td>$4,420</td>
-                <td>$5,000</td>
-            </tr>
-            <tr>
-                <td>October</td>
-                <td>$4,870</td>
-                <td>$5,000</td>
-            </tr> 
-            <tr>
-                <td>November</td>
-                <td>$8,610</td>
-                <td class="top">$7,500</td>
-            </tr>
-            <tr>
-                <td><i>Black Friday</i></td>
-                <td colspan="2">$3,200</td>
-            </tr>
-            <tr>
-                <td>December</td>
-                <td>$6,820</td>
-                <td>$7,500</td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <td colspan="3">Compiled 12.20.2020 by bRauls</td>
-            </tr>
-        </tfoot>
-    </table>
+      <header>       </header>
+      <main>
+        <table>
+            <thead>
+                <tr>
+                    <th class=header colspan="3">ACME Wildwest</th>
+                </tr>
+                <tr>
+                    <th>Period</th>
+                    <th>Sales</th>
+                    <th>Sales Goals</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>August</td>
+                    <td>$3,590</td>
+                    <td>$4,000</td>
+                </tr>
+                <tr>
+                    <td>September</td>
+                    <td>$4,420</td>
+                    <td>$5,000</td>
+                </tr>
+                <tr>
+                    <td>October</td>
+                    <td>$4,870</td>
+                    <td>$5,000</td>
+                </tr> 
+                <tr>
+                    <td>November</td>
+                    <td>$8,610</td>
+                    <td class="top">$7,500</td>
+                </tr>
+                <tr>
+                    <td><i>Black Friday</i></td>
+                    <td colspan="2">$3,200</td>
+                </tr>
+                <tr>
+                    <td>December</td>
+                    <td>$6,820</td>
+                    <td>$7,500</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="3">Compiled 12.20.2020 by bRauls</td>
+                </tr>
+            </tfoot>
+        </table>
+    </main>
+    <footer>
+
+    </footer>
   </body>
 </html>
