--- a/assignments/lesson-8/storm-center.html
+++ b/assignments/lesson-8/storm-center.html
@@ -37,11 +37,11 @@
         </nav>
 
         <main>
-            <form action="thanks.html" method="get" id="stormReport">
+            <form action="thank-you.html" method="get" id="stormReport"> <h1>Storm Report Submission Form</h1>
                 <div>
                     <!-- full name using input of type text and is required and only accepts alpha characters with a minimum of five characters using a regular expression pattern. -->
-                    <label for="fullName">Please enter your full name: (must be at least 5 characters)</label>
-                    <input type="text" id="fullName" name="fullName" required minlength="5" [A-Za-z]{5}>
+                    <label for="fullName">Please enter your full name: <span class="description">(must be at least 5 characters)</span></label>
+                    <input type="text" id="fullName" name="fullName" required minlength="5" [A-Za-z]>
                 </div>  
 
                 <div>
@@ -52,63 +52,64 @@
  
                 <div>
                 <!-- phone number using input of type tel and is required. -->
-                    <label for="contactNumber">Contact number (home, mobile, fax):</label>
-                    <input type="tel" name="contactNumber" required pattern="[0-9]{3}[ -][0-9]{3}[ -][0-9]{4}">
+                    <label for="contactNumber">Contact number <span class="description">(home, mobile, fax)</span>:</label>
+                    <input type="tel" name="contactNumber" required pattern="[0-9]{3}-[0-9]{3} -[0-9]{4}" placeholder="###-###-####">
                 </div>
 
                 <div>
                 <!-- zip code using input of type number and is required. -->
-                    <label for="zipCode"> Input your zip code </label>
-                    <input type="number" id="zipCode" name="zipCode" required pattern="[0-9]{5}">
+                    <label for="zipCode"> Input your five digit zip code: </label>
+                    <input type="text" id="zipCode" name="zipCode" required pattern="[0-9]{5}">
                 </div>
 
                 <div>
                 <!-- storm date using input of type date -->
-                    <label for="stormDate">Date of Storm</label>
+                    <label for="stormDate">Date of Storm:</label>
                     <input type="date" id="stormDate" name="stormDate">
                 </div>
 
                 <div>
                 <!-- storm type using input with a list attribute using a datalist of suggestions including "Flash Flood," "Hail," "Hurricane," "Thunderstorm," and "Tornado." -->
                     <label for="stormType">Choose a storm type:</label>
-                    <input list="stormlist" id="stormType" name="stormType"> 
-                        <datalist id="stormlist">
+                    <input list="storms" name="stormType" id="stormType" > 
+                        <datalist id="storms">
                             <option value="Flash Food">
                             <option value="Hail">
                             <option value="Hurricane">
-                            <option value="Thunderstorm">    
+                            <option value="Thunderstorm">  
                             <option value="Tornado">
                         </datalist>
                 </div>
 
                 <div>
                 <!-- storm severity using type range (1 to 10) with a corresponding label that indicates the current range value from 1 to 10. -->
-                    <label for="severity">What is the storm severity? (1=lowest; 10=severist)</label>   
+                    <label for="severity">What is the storm severity? <span class="description">(1=lowest; 10=severist)</span></label>  <br>
                     <input type="range" name="severity" id="severity" min="1" max="10" step="1" value="5" oninput="adjustRating(this.value)" onchange="adjustRating(this.value)">
-                    <span id="ratingValue">5</span>
+                    <span id="ratingValue">#</span> <br>
                 </div>
 
                 <div>
                 <!-- storm region using select with drop-down options of "Preston," Soda Springs, and "Fish Haven." Add a first option with the text "Select Region ..." that is shown by default but not selectable (disabled). The rest of the options should have relevant value attributes. -->
-                    <label for="region">Select the region of the storm.</label>
-                    <input list="regionList" id="region" name="region">
-                        <datalist id="regionList">
-                            <option value="Preston">
-                            <option value="Soda Spring">                    <option value="Fish Haven">
-                        </datalist>
+                    <label for="region">Select the region of the storm:</label>
+                    <select id="region" name="region" value="">
+                            <option selected disabled value="">Select Region...</option>
+                            <option value="Preston">Preston</option>
+                            <option value="Soda Springs">Soda Springs</option>
+                            <option value="Fish Haven">Fish Haven</option>
+                    </select>
                 </div>
 
                 <div>
                 <!-- user in-danger level using input of type radio with options and values of "yes," "maybe," and "no." -->
-                    <label for="danger">Are you in danger?</label>
-                    <input type="radio" id="danger" name="danger" value="no">
-                    <input type="radio" id="danger" name="danger" value="yes">
-                    <input type="radio" id="danger" name="danger" value="maybe">
+                    <label for="danger">Are you in danger?</label><br>
+                    <input type="radio" id="danger" name="danger" value="no"> No <br>
+                    <input type="radio" id="danger" name="danger" value="yes"> Yes <br>
+                    <input type="radio" id="danger" name="danger" value="maybe"> Maybe
                 </div>
 
                 <div>
                 <!-- additional information or comments using a textarea -->
-                    <label for="comments">Comments and additional Information:</label>    
+                    <label for="comments">Comments and additional Information:</label> <br>  
                     <textarea id="comments" name="comments" rows="4" cols="50" form="stormReport"></textarea>
                 </div>
 
@@ -145,5 +146,6 @@
         <script src="scripts/currentdate.js"> </script>
         <script src="scripts/hamburger.js"> </script>
         <script src="scripts/windChill.js"></script>
+        <script src="scripts/stormRating.js"></script>
     </body>
 </html>
