--- a/assignments/lesson-8/storm-center.html
+++ b/assignments/lesson-8/storm-center.html
@@ -87,7 +87,7 @@
                     <input type="range" name="severity" id="severity" min="1" max="10" step="1" value="5" 
                     oninput="adjustRating(this.value)" 
                     onchange="adjustRating(this.value)">
-                    <span id="ratingValue">#</span> <br>
+                    <span id="ratingValue">5</span> <br>
                 </div>
 
                 <div>
