--- a/assignments/lesson-8/gallery-8.html
+++ b/assignments/lesson-8/gallery-8.html
@@ -30,7 +30,7 @@
                 <li><a href="preston-8.html">Preston</a></li>
                 <li><a href="#">Soda Springs</a></li>
                 <li><a href="#">Fish Haven</a></li>
-                <li><a href="#">Storm Center</a></li>
+                <li><a href="storm-center.html">Storm Center</a></li>
                 <li><a class="active" href="#">Gallery</a></li>  
             </ul>
         </nav>
