--- a/assignments/lesson-8/preston-8.html
+++ b/assignments/lesson-8/preston-8.html
@@ -31,7 +31,7 @@
                 <li class="menuPreston"><a class="active" href="#">Preston</a></li>
                 <li class="menuSodaSprings"><a href="#">Soda Springs</a></li>
                 <li class="menuFishHaven"><a href="#">Fish Haven</a></li>
-                <li class="menuStormCenter"><a href="#">Storm Center</a></li>
+                <li class="menuStormCenter"><a href="storm-center.html">Storm Center</a></li>
                 <li class="menuGallery"><a href="gallery-8.html">Gallery</a></li>  
             </ul>
         </nav>
