--- a/assignments/lesson-8/storm-center.html
+++ b/assignments/lesson-8/storm-center.html
@@ -41,7 +41,7 @@
                 <div>
                     <!-- full name using input of type text and is required and only accepts alpha characters with a minimum of five characters using a regular expression pattern. -->
                     <label for="fullName">Please enter your full name: <span class="description">(must be at least 5 characters)</span></label>
-                    <input type="text" id="fullName" name="fullName" required minlength="5" pattern=[A-Za-z]{5}>
+                    <input type="text" id="fullName" name="fullName" required minlength="5" pattern=[A-Za-z].{5,}>
                 </div>  
 
                 <div>
@@ -53,7 +53,7 @@
                 <div>
                 <!-- phone number using input of type tel and is required. -->
                     <label for="contactNumber">Contact number <span class="description">(format: ###-###-####)</span>:</label>
-                    <input type="tel" id="contactNumber" name="contactNumber" required pattern="[0-9]{3}[-][0-9]{3}[-][0-9]{4}" placeholder="###-###-####">
+                    <input type="tel" id="contactNumber" name="contactNumber" required minlenth="9" pattern="^\D?(\d{3})\D?\D?(\d{3})\D?(\d{4})$" placeholder="###-###-####">
                 </div>
 
                 <div>
@@ -83,7 +83,8 @@
 
                 <div>
                 <!-- storm severity using type range (1 to 10) with a corresponding label that indicates the current range value from 1 to 10. -->
-                    <label for="severity">What is the storm severity? <span class="description">(1=lowest; 10=strongest)</span></label>  <br>
+                    <label for="severity">What is the storm severity?<br>
+                         <span class="description">(1=lowest; 10=strongest)</span></label>  <br>
                     <input type="range" name="severity" id="severity" min="1" max="10" step="1" value="5" 
                     oninput="adjustRating(this.value)" 
                     onchange="adjustRating(this.value)">
